--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -1,7 +1,8 @@
-# Jekyll configuration for Open SDG platform
-#
 # NOTE: This "production" version only contains differences from _config.yml.
-#       See also _data/site_config_prod.yml in this repository.
 
-baseurl: ""
+# NOTE: For production "site configuration" in Open SDG, see the following file:
+# _data/site_config_prod.yml
+# This "site_config_prod.yml" file contains differences from "site_config.yml".
+
+baseurl: "/sdg"
 environment: production
