--- a/_data/site_config.yml
+++ b/_data/site_config.yml
@@ -1,7 +1,6 @@
-﻿analytics:
-  ua: ''
-  gtag: ''
-  gtm: ''
+﻿accessible_charts: true
+accessible_tabs: true
+analytics:
   ga_prod: ''
 breadcrumbs:
   goal:
@@ -19,41 +18,49 @@ breadcrumbs:
       label: general.home
     - path: /news
       label: menu.updates
-cookie_consent_form:
-  enabled: false
+contrast_type: default
 country:
-  name: Australia
-  adjective: Australian
+  name: Lao PDR
+  adjective: Lao
 create_goals:
+  layout: goal-by-target-vertical
   previous_next_links: false
   goals: []
 create_indicators:
+  layout: indicator
   previous_next_links: false
 create_pages:
   - filename: ''
+    folder: /
+    layout: frontpage-alt
+    title: ''
+  - filename: ''
     folder: /goals
     layout: goals
-    title: general.goals
+    title: ''
   - filename: ''
     folder: /reporting-status
     layout: reportingstatus
-    title: status.reporting_status
+    title: ''
+  - filename: indicators.json
+    folder: /
+    layout: indicator-json
+    title: ''
   - filename: ''
     folder: /search
     layout: search
-    title: search.search
+    title: ''
 custom_css: []
 custom_js:
   - /assets/js/custom.js
-data_edit_url: data
+data_edit_url: 'https://github.com/sdg-laos/data/tree/develop/data'
 data_fields:
-  units: ''
-  series: ''
+  units: UNIT_MEASURE
+  series: SERIES
 date_formats: []
 disclaimer:
   phase: ''
   message: ''
-  hidden: false
 email_contacts:
   questions: test@example.com
   suggestions: test@example.com
@@ -61,12 +68,8 @@ email_contacts:
 environment: staging
 footer_language_toggle: none
 footer_menu:
-  - path: /contact-us
+  - path: /contact/
     translation_key: menu.contact_us
-  - path: 'https://twitter.com/MyTwitterAccount'
-    translation_key: general.twitter
-  - path: 'https://facebook.com/MyFacebookAccount'
-    translation_key: general.facebook
   - path: /about/cookies-and-privacy/
     translation_key: menu.cookies
 frontpage_cards:
@@ -76,82 +79,62 @@ frontpage_cards:
     button_label: ''
     button_link: ''
     rule_color: ''
-  - title: Lorem ipsum
-    content: |
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mollis
-      cursus est sed dapibus.
-    include: ''
-    button_label: Read more
-    button_link: 'https://example.com'
-    rule_color: ''
-  - title: Nam vestibulum
-    content: |
-      Nam vestibulum, purus quis porttitor imperdiet, nisl sem mollis nisl, a
-      interdum risus enim vitae tortor. Donec feugiat accumsan rutrum.
-    include: ''
-    button_label: Read more
-    button_link: 'https://example.com'
-    rule_color: ''
 frontpage_goals_grid:
-  title: frontpage.heading_short
-  description: frontpage.instructions_short
+  title: custom.goals_grid_title
+  description: custom.goal_grid_description
+frontpage_heading: ''
+frontpage_instructions: ''
 frontpage_introduction_banner:
-  title: frontpage.intro_title
-  description: frontpage.intro_body
-goal_image_base: 'https://open-sdg.org/sdg-translations/assets/img/goals'
-goal_image_extension: ''
+  title: custom.frontpage_intro_title
+  description: custom.frontpage_intro_body
+goal_image_base: /site/assets/img/goals
+goal_image_extension: svg
 goals_page:
-  title: general.goals
-  description: goal.description
+  title: ''
+  description: ''
 graph_color_headline: '#004466'
 graph_color_headline_high_contrast: '#55a6e5'
 graph_color_set: accessible
 graph_color_list: []
 graph_color_number: 0
-graph_title_from_series: false
-header_language_toggle: dropdown
+graph_title_from_series: true
+header:
+  include: header-menu-left-aligned.html
+header_language_toggle: links
 hide_empty_metadata: true
-hide_single_series: true
-hide_single_unit: true
 indicator_config_form:
   enabled: true
   dropdowns: []
-  repository_link: /tree/develop/indicator-config
+  repository_link: 'https://github.com/sdg-laos/data/tree/develop/indicator-config'
   translation_link: ''
 indicator_data_form:
-  enabled: true
-  repository_link: /tree/develop/data
+  enabled: false
+  repository_link: ''
 indicator_metadata_form:
-  enabled: true
+  enabled: false
   dropdowns: []
-  repository_link: /tree/develop/meta
+  repository_link: ''
   translation_link: ''
   language: ''
-  scopes:
-    - national
-    - global
+  scopes: []
   exclude_fields: []
   translated: false
-indicator_tabs:
-  tab_1: ''
-  tab_2: ''
-  tab_3: ''
-  tab_4: ''
 languages:
+  - lo
   - en
-  - es
 languages_public: []
 logos: []
 map_layers: []
 map_options:
-  disaggregation_controls: false
   minZoom: 5
   maxZoom: 10
-  tileURL: ''
+  tileURL: 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'
   tileOptions:
     id: ''
     accessToken: ''
-    attribution: ''
+    attribution: >-
+      &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>
+      contributors
   colorRange: chroma.brewer.BuGn
   noValueColor: '#f0f0f0'
   styleNormal:
@@ -182,57 +165,29 @@ menu:
   - path: /about
     translation_key: menu.about
     dropdown: []
-  - path: /faq
-    translation_key: menu.faq
+  - path: /guidance
+    translation_key: menu.guidance
     dropdown: []
-  - path: /news
-    translation_key: menu.updates
-    dropdown: []
-metadata_edit_url: metadata
-metadata_tabs:
-  - scope: national
-    title: indicator.national_metadata
-    description: indicator.national_metadata_blurb
-  - scope: global
-    title: indicator.global_metadata
-    description: indicator.global_metadata_blurb
-  - scope: sources
-    title: indicator.sources
-    description: ''
+metadata_edit_url: 'https://github.com/sdg-laos/data/tree/develop/meta'
+metadata_tabs: []
 news:
   category_links: false
-progress_status:
-  status_heading: ''
-  status_types: []
-remote_data_prefix: 'https://open-sdg.org/open-sdg-data-starter'
+non_global_metadata: indicator.national_metadata
+remote_data_prefix: 'https://brockfanning.github.io/sdg-data-laos-demo/'
 reporting_status:
-  title: status.reporting_status
-  description: status.description
+  title: ''
+  description: ''
   disaggregation_tabs: false
-  status_types:
-    - value: notstarted
-      label: status.exploring_data_sources
-      hide_on_goal_pages: false
-    - value: complete
-      label: status.reported_online
-      hide_on_goal_pages: false
-    - value: notapplicable
-      label: status.not_applicable
-      hide_on_goal_pages: false
-repository_url_data: 'https://github.com/open-sdg/open-sdg-data-starter'
+repository_url_data: ''
 repository_url_site: ''
 search_index_boost: []
 search_index_extra_fields: []
+series_toggle: true
+sharethis_property: ''
 site_config_form:
   enabled: true
   dropdowns: []
-  repository_link: /tree/develop/_data
+  repository_link: 'https://github.com/sdg-laos/site/tree/develop/_data'
   translation_link: ''
-time_series_attributes:
-  - field: COMMENT_TS
-    label: indicator.footnote
-  - field: DATA_LAST_UPDATE
-    label: metadata_fields.national_data_update_url
 validate_indicator_config: false
 validate_site_config: false
-x_axis_label: ''
