--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # _data/site_config.yml
 
 # Tell the Remote Theme plugin to use the Open SDG platform (Jekyll theme).
-remote_theme: open-sdg/open-sdg@2.0.0-dev
+remote_theme: open-sdg/open-sdg@2.0.0
 
 # Replace this title as needed.
 title: general.site_title
